--- a/ymls/cuda10.yml
+++ b/ymls/cuda10.yml
@@ -79,7 +79,7 @@ dependencies:
     - seaborn==0.10.1
     - selfies==0.2.4
     - tqdm==4.45.0
-    - openbabel
+    - pybel
     - ordered-set
 prefix: /c7/home/vmallet/anaconda3/envs/optimol
 
